MANTIS-17806: Fixed class file search URL rewriting for running from a standalone build